--- a/public/Static/Css/ruleStyle2.css
+++ b/public/Static/Css/ruleStyle2.css
@@ -29,7 +29,7 @@ body
     border-radius: 20px;
     height: 60vh;
     width:70vw;
-   
+    overflow: auto;
 }
 
 
